# SafeFlushProject

./: CMakeLists.txt  README.md  main.c
FlushAPI/Headers/: flush.h  tools.h
FlushAPI/Sources/: flush.c  tools.c
SafeFlushAPI/Headers/: safe_flush.h
SafeFlushAPI/Sources/: safe_flush.c
